Fixed button overflow

--- a/frontend/src/pages/Player/Toolbar/Toolbar.module.scss
+++ b/frontend/src/pages/Player/Toolbar/Toolbar.module.scss
@@ -208,8 +208,10 @@
 
     button {
         height: fit-content;
+        margin-bottom: 6px;
         margin-left: var(--size-xxSmall);
         margin-right: var(--size-xxSmall);
+        margin-top: 6px;
     }
 }
 
